with the latest versions of Password Safe. For a short description of
Password Safe, please see the accompanying README.txt file. For more 
information on the product and the project, please visit
http://passwordsafe.sourceforge.net. Details about changes to older
releases may be found in the file ChangeLog.txt.

New Features for 3.25.1
=======================
[3286721] User can now toggle the database between read-only and read-write
mode (and vice versa) via a menu item or by double-clicking on the current
R-O or R/W indicator in the StausBar.
[3203152] The language can changed 'on-the-fly'. It requires that the
resource-only DLLs be built with V2.0 or later of ResPWSL (i.e. supplied
with PasswordSafe V3.25.1 or later).
[3065111] Add/Edit now displays both the Application's (PasswordSafe) and the
current database's default Autotype string (if set via Manage->Options).
[2964804] The user can specify the list of symbols valid for a database and can
override this for any particular entry. Note: the inbuilt special symbols
for EasyVision and Pronounceable passwords can not be overriden in either case.

Changes to Existing Features in 3.25.1
======================================
[] Polish installation texts added thanks to Michal Niklas.
[] An entry's password exipry date is set or cleared directly rather than using
the Set and Clear buttons after changing values.
[] The default password generation policy is now for 12 character
passwords that include symbol characters (previous default was 8, no
symbols).

Bugs fixed in 3.25.1
====================
[3234204] PasswordSafe no longer ends if the command flag is set to "-s <databasename>".
[] Controls in Edit are now disabled if entry is protected, even though the user could
not have saved any changes.

New Features for 3.25
=====================
[] Dutch installation instructions thank to Kees, and a first
(incomplete) Dutch translation of the application thank to Bert, Kees
and Fred.