@@ -131,6 +131,7 @@ BEGIN
     CONTROL         "",IDC_STATIC_DRAGNOTES,"Static",SS_BITMAP | SS_NOTIFY | SS_CENTERIMAGE | WS_GROUP,72,6,13,13,WS_EX_TRANSPARENT
     CONTROL         "",IDC_STATIC_DRAGURL,"Static",SS_BITMAP | SS_NOTIFY | SS_CENTERIMAGE | WS_GROUP,89,6,13,13,WS_EX_TRANSPARENT
     CONTROL         "",IDC_STATIC_DRAGEMAIL,"Static",SS_BITMAP | SS_NOTIFY | SS_CENTERIMAGE | WS_GROUP,106,6,13,13,WS_EX_TRANSPARENT
+    CONTROL         "",IDC_STATIC_DRAGAUTO,"Static",SS_BITMAP | SS_NOTIFY | SS_CENTERIMAGE | WS_GROUP,123,6,13,13,WS_EX_TRANSPARENT
 END
 
 IDD_SECURECLEAR DIALOGEX 0, 0, 248, 100
@@ -1593,6 +1594,8 @@ IDB_ADDGROUP_NEW_D      BITMAP                  ".\\graphics\\toolbar\\new\\addg
 IDB_DUPLICATEGROUP_CLASSIC BITMAP                  ".\\graphics\\toolbar\\classic\\duplicategroup.bmp"
 IDB_DUPLICATEGROUP_NEW  BITMAP                  ".\\graphics\\toolbar\\new\\duplicategroup.bmp"
 IDB_DUPLICATEGROUP_NEW_D BITMAP                  ".\\graphics\\toolbar\\new\\duplicategroup_disabled.bmp"
+IDB_DRAGAUTOX_CLASSIC   BITMAP                  ".\\graphics\\dragbar\\classic\\AutotypeX.bmp"
+IDB_DRAGAUTOX_NEW       BITMAP                  ".\\graphics\\dragbar\\new\\AutotypeX.bmp"
 
 /////////////////////////////////////////////////////////////////////////////
 //
